# ALPHA-G-EBM-model-

./: MODAL_SETUP.md  pyproject.toml
src/alpha_g/: __init__.py  config.py  train.py  train_kaggle.py
src/alpha_g/data/: __init__.py  dataset.py  kaggle_dataset.py
src/alpha_g/model/: __init__.py  aeg.py  alpha_g.py  bep.py  decoder.py  hmc.py  losses.py  serializer.py
src/alpha_g/training/: __init__.py  trainer.py
